[package]
name = "m3u_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
m3u_parser = { version = "0.1.2" }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time", "full"] }
toml = "0.8.19"
